chore(auth): remove unnecessary platform code & add dcm dependency

--- a/packages/auth/pubspec.yaml
+++ b/packages/auth/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
   desktop_webview_window: ^0.2.0
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^8.0.0
   webview_flutter: ^4.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  dart_code_metrics: ^5.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
