--- a/packages/auth/analysis_options.yaml
+++ b/packages/auth/analysis_options.yaml
@@ -2,3 +2,16 @@ include: package:flutter_lints/flutter.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+#
+dart_code_metrics:
+  extends:
+    - package:dart_code_metrics/presets/all.yaml
+  metrics:
+      cyclomatic-complexity: 20
+      number-of-parameters: 4
+      maximum-nesting-level: 5
+  metrics-exclude:
+    - test/**
+  anti-patterns:
+    - long-method
+    - long-parameter-list
