--- a/packages/auth/pubspec.yaml
+++ b/packages/auth/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   desktop_webview_window: ^0.2.0
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^8.0.0
+  # flutter_secure_storage: ^8.0.0
   webview_flutter: ^4.0.6
 
 dev_dependencies:
